2005-09-18  Erez Zadok  <ezk@cs.sunysb.edu>

	* README.attrcache: document netbsd's patchs to support noac.

	* libamu/mount_fs.c (compute_nfs_attrcache_flags): cleanup the
	code that sets the ac{reg,dir}{min,max} fields so it also sets the
	appropriate nfs_args->flags such as MNT2_NFS_OPT_ACREGMIN.

	* configure.in: check for nfs_args fields acregmax and acdirmax.

	* README.attrcache: new file documenting in detail OS bugs
	relating to attribute caching, which can affect Amd's reliability
	under heavy load.
	Update status of freebsd and openbsd.

	* doc/Makefile.am: install README.attrcache file as attrache.txt
	file on am-utils Web site.

	* Makefile.am (EXTRA_DIST): include README.attrcache in distro.

	* BUGS, NEWS, doc/am-utils.texi (auto_attrcache Parameter),
	scripts/amd.conf.5, scripts/amd.conf-sample: document attribute
	cache bugs on some OSs.

2005-09-17  Erez Zadok  <ezk@cs.sunysb.edu>

	* libamu/xutil.c (clocktime): newly implemented routine.  Uses
	gettimeofday() each time to return a high-resolution clock time,
	and does not "cache" the last time.  Returns time in seconds, just
	like the old implementation.  If passed a non-null argument, will
	fill it in with the current time in seconds+microseconds.

	* libamu/xutil.c: remove actual declaration of clock_valid, and
	another never-used declaration for xclock_valid.

	* include/am_utils.h: remove defunct definition of clocktime()
	macro and clock_valid variable.  Add extern for new definition.

	* libamu/mount_fs.c (mount_fs), hlfsd/homedir.c (homedir,
	hlfsd_diskspace, hlfsd_getpwent, plt_reset, table_add),
	hlfsd/hlfsd.c (main, hlfsd_init, reload, cleanup),
	conf/mtab/mtab_mach3.c (open_locked_mtab), conf/mtab/mtab_file.c
	(open_locked_mtab), amd/nfs_start.c (do_select, run_rpc),
	amd/autil.c (host_normalize): remove defunct clock_valid.

	* amd/nfs_subr.c (nfsproc_getattr_2_svc): Print microseconds for
	node's mtime.
	(fh_to_mp3): use new clocktime() to update mtime and get a better