@@ -134,7 +134,7 @@ nfsproc_getattr_2_svc(am_nfs_fh *argp, struct svc_req *rqstp)
      * Some NFS clients may need this code.
      */
     if (uid != rootfattr.na_uid) {
-      rootfattr.na_mtime.nt_seconds++;
+      clocktime(&rootfattr.na_mtime);
       rootfattr.na_uid = uid;
     }
 #endif /* 0 */
@@ -153,7 +153,7 @@ nfsproc_getattr_2_svc(am_nfs_fh *argp, struct svc_req *rqstp)
      * so we must update the nt_seconds field every time.
      */
     if (uid != slinkfattr.na_uid) {
-      slinkfattr.na_mtime.nt_seconds++;
+      clocktime(&slinkfattr.na_mtime);
       slinkfattr.na_uid = uid;
     }
 #endif /* not MNT2_NFS_OPT_SYMTTL */
@@ -238,7 +238,7 @@ nfsproc_lookup_2_svc(nfsdiropargs *argp, struct svc_req *rqstp)
      * Some NFS clients may need this code.
      */
       if (uid != rootfattr.na_uid) {
-	rootfattr.na_mtime.nt_seconds++;
+	clocktime(&rootfattr.na_mtime);
 	rootfattr.na_uid = uid;
       }
 #endif /* 0 */
@@ -260,7 +260,7 @@ nfsproc_lookup_2_svc(nfsdiropargs *argp, struct svc_req *rqstp)
        * so we must update the nt_seconds field every time.
        */
       if (uid != slinkfattr.na_uid) {
-	slinkfattr.na_mtime.nt_seconds++;
+	clocktime(&slinkfattr.na_mtime);
 	slinkfattr.na_uid = uid;
       }
 #endif /* not MNT2_NFS_OPT_SYMTTL */
@@ -317,7 +317,7 @@ nfsproc_readlink_2_svc(am_nfs_fh *argp, struct svc_req *rqstp)
     if (getcreds(rqstp, &userid, &groupid, nfsxprt) < 0)
       return (nfsreadlinkres *) NULL;
 
-    gettimeofday((struct timeval *) &slinkfattr.na_atime, (struct timezone *) NULL);
+    clocktime(&slinkfattr.na_atime);
 
     res.rlr_status = NFS_OK;
     if (groupid == hlfs_gid) {
@@ -490,7 +490,7 @@ nfsproc_readdir_2_svc(nfsreaddirargs *argp, struct svc_req *rqstp)
   if (eq_fh(&argp->rda_fhandle, &slink)) {
     res.rdr_status = NFSERR_NOTDIR;
   } else if (eq_fh(&argp->rda_fhandle, &root)) {
-    gettimeofday((struct timeval *) &rootfattr.na_atime, (struct timezone *) NULL);
+    clocktime(&rootfattr.na_atime);
 
     res.rdr_status = NFS_OK;
     switch (argp->rda_cookie[0]) {
